<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="10"
    android:background="@drawable/background_img"
    tools:context=".OfflineGetPlayersNamesActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"></View>

        <ImageView
            android:id="@+id/player_names_back_btn"
            android:layout_width="0dp"
            android:padding="2dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/back_icon"></ImageView>

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="8.5"></View>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5"></View>


    <LinearLayout
        android:id="@+id/player_one_layout"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_height="0dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:weightSum="10"
        android:orientation="vertical"
        android:layout_weight="5.5">

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"></View>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="40dp"
            android:layout_weight="1"
            android:fontFamily="@font/poppins_regular"
            android:gravity="center_vertical"
            android:text="@string/player_one"
            android:textAllCaps="false"
            android:textColor="#5C5C5C"
            android:textSize="20dp"

            android:textStyle="bold"></TextView>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"></View>

        <EditText
            android:id="@+id/player_one_name_edttxt"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_weight="1.5"
            android:backgroundTint="#373737"
            android:cursorVisible="true"
            android:hint="@string/nick_name"
            android:maxLength="10"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="#5C5C5C"
            android:textColorHint="#6E6E6E"
            android:textSize="18dp"></EditText>


        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.5"></View>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/player_one_btn"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_marginLeft="95dp"
            android:layout_marginRight="95dp"
            android:layout_weight="1.5"
            android:background="@drawable/button_1"
            android:fontFamily="@font/poppins_medium"
            android:gravity="center"
            android:text="@string/next"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18dp"
            android:textStyle="bold" />


        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"></View>


    </LinearLayout>




    <LinearLayout
        android:visibility="gone"
        android:id="@+id/player_two_layout"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_height="0dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:weightSum="10"
        android:orientation="vertical"
        android:layout_weight="5.5">

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"></View>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="40dp"
            android:layout_weight="1"
            android:fontFamily="@font/poppins_regular"
            android:gravity="center_vertical"
            android:text="@string/player_two"
            android:textAllCaps="false"
            android:textColor="#4C4C4C"
            android:textSize="20dp"
            android:textStyle="bold"></TextView>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"></View>

        <EditText
            android:id="@+id/player_two_name_edttxt"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_weight="1.5"
            android:backgroundTint="#4C4C4C"
            android:hint="@string/nick_name"
            android:maxLength="10"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="#4C4C4C"
            android:textColorHint="#4C4C4C"
            android:textSize="18dp"></EditText>


        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.5"></View>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/player_two_btn"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_marginLeft="95dp"
            android:layout_marginRight="95dp"
            android:layout_weight="1.5"
            android:background="@drawable/button_1"
            android:fontFamily="@font/poppins_medium"
            android:gravity="center"
            android:text="@string/next"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18dp"
            android:textStyle="bold" />


        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"></View>


    </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"></View>








</LinearLayout>